<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fakekube.io</groupId>
	<artifactId>server</artifactId>
	<packaging>war</packaging>
	<name>fakekube-server</name>
	<description>No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)</description>
	<version>1.0.0</version>
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.tomee.maven</groupId>
				<artifactId>tomee-maven-plugin</artifactId>
				<version>8.0.0</version>
				<configuration>
					<tomeeClassifier>plume</tomeeClassifier>
					<args>-Xmx512m -XX:PermSize=256m</args>
					<context>ROOT</context>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.swagger</groupId>
				<artifactId>swagger-codegen-maven-plugin</artifactId>
				<version>2.4.10</version>
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<!-- Skip Code Generation Parameter -->
							<skip>false</skip>
							<inputSpec>${project.basedir}/openapi/swagger.json</inputSpec>
							<language>jaxrs-cxf</language>
							<configOptions>
								<sourceFolder>src/gen/java/</sourceFolder>
								<useGenericResponse>true</useGenericResponse>
							</configOptions>
							<skip>true</skip>
							<modelPackage>fakekube.io.model</modelPackage>
							<apiPackage>fakekube.io.api</apiPackage>
							<output>${project.basedir}</output>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!--plugin> <groupId>org.eclipse.jetty</groupId> <artifactId>jetty-maven-plugin</artifactId> 
				<version>${jetty-version}</version> <configuration> <webApp> <contextPath>/</contextPath> 
				</webApp> <webAppSourceDirectory>target/${project.artifactId}-${project.version}</webAppSourceDirectory> 
				<stopPort>8079</stopPort> <stopKey>stopit</stopKey> <httpConnector> <port>8080</port> 
				<idleTimeout>60000</idleTimeout> </httpConnector> </configuration> <executions> 
				<execution> <id>start-jetty</id> <phase>pre-integration-test</phase> <goals> 
				<goal>start</goal> </goals> <configuration> <scanIntervalSeconds>0</scanIntervalSeconds> 
				<daemon>true</daemon> </configuration> </execution> <execution> <id>stop-jetty</id> 
				<phase>post-integration-test</phase> <goals> <goal>stop</goal> </goals> </execution> 
				</executions> </plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>1.9.1</version>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>src/gen/java</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- build WAR file -->
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>com.google.protobuf</groupId>
			<artifactId>protobuf-java</artifactId>
			<version>3.16.1</version>
		</dependency>
		<dependency>
			<groupId>javax.enterprise</groupId>
			<artifactId>cdi-api</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.kubernetes</groupId>
			<artifactId>client-java-api</artifactId>
			<version>7.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.swagger</groupId>
			<artifactId>swagger-jaxrs</artifactId>
			<scope>compile</scope>
			<version>${swagger-core-version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback-version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>${logback-version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit-version}</version>
			<scope>test</scope>
		</dependency>
		<!-- Bean Validation API support -->
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>${beanvalidation-version}</version>
			<scope>provided</scope>
		</dependency>
		<!-- CXF Client -->
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-rs-client</artifactId>
			<version>${cxf-version}</version>
			<scope>test</scope>
		</dependency>

		<!-- CXF server -->
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-frontend-jaxrs</artifactId>
			<version>${cxf-version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-rs-service-description</artifactId>
			<version>${cxf-version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-rs-service-description-swagger</artifactId>
			<version>${cxf-version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-ws-policy</artifactId>
			<version>${cxf-version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-wsdl</artifactId>
			<version>${cxf-version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.jaxrs</groupId>
			<artifactId>jackson-jaxrs-json-provider</artifactId>
			<version>${jackson-jaxrs-version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-joda</artifactId>
			<version>${jackson-jaxrs-version}</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>4.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.johnzon</groupId>
			<artifactId>johnzon-mapper</artifactId>
			<version>1.1.13</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.johnzon</groupId>
			<artifactId>johnzon-core</artifactId>
			<version>1.1.13</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.johnzon</groupId>
			<artifactId>johnzon-jaxrs</artifactId>
			<version>1.1.13</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.json</groupId>
			<artifactId>javax.json-api</artifactId>
			<version>1.1.4</version>
		</dependency>
		<dependency>
			<groupId>io.prometheus</groupId>
			<artifactId>simpleclient</artifactId>
			<version>0.8.1</version>
		</dependency>
		<dependency>
			<groupId>io.prometheus</groupId>
			<artifactId>simpleclient_common</artifactId>
			<version>0.8.1</version>
		</dependency>
		<dependency>
		    <groupId>org.xerial.snappy</groupId>
		    <artifactId>snappy-java</artifactId>
		    <version>1.1.7.3</version>
		</dependency>
		<dependency>
		    <groupId>com.google.protobuf</groupId>
		    <artifactId>protobuf-java</artifactId>
		    <version>3.16.1</version>
		</dependency>
		<dependency>
		    <groupId>io.cellery.observability</groupId>
		    <artifactId>gogoproto-java</artifactId>
		    <version>0.2.2</version>
		</dependency>
		<dependency>
			<groupId>com.cloudbees</groupId>
			<artifactId>syslog-java-client</artifactId>
			<version>1.1.7</version>
		</dependency>
	</dependencies>
	<repositories>
		<repository>
			<id>sonatype-snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
	<properties>
		<java.version>11</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<swagger-core-version>1.5.18</swagger-core-version>
		<jetty-version>9.3.27.v20190418</jetty-version>
		<junit-version>4.13.1</junit-version>
		<logback-version>1.2.0</logback-version>
		<servlet-api-version>2.5</servlet-api-version>
		<beanvalidation-version>1.1.0.Final</beanvalidation-version>
		<cxf-version>3.2.1</cxf-version>
		<jackson-jaxrs-version>2.10.1</jackson-jaxrs-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
</project>
